# sql-forge

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: sql-forge.yml
.sqlx/: query-2bb7bbbb5f777859cf41007262355519fd2ce0d2254ba99e3469a4274d0d71ce.json  query-2da3adcb1fb05d4d3e4779017417e2e3b87e1179ebabf9fbe920d288098f2074.json  query-7f3279ef2c86542b1e2d3de4c3d8ae2612269c36061592a8edfb39ae425a63f3.json  query-a1ee305f08c75028aa9e3d02fe99913a150493d75d7d7b1a7600ad6ffd0b9513.json  query-bc3f9e2976ab7e3c11c9880a4bd40a277691619b31cdae35577a41615f89f107.json  query-edec8237d81de156582c8f840002f210a8c0a867e2f4cc0ce818e010bdadd567.json  query-edf8bf89c54f021ae79f1adeb62c078efc5df444f341ff11df3c6817d70c3344.json  query-f04e8be76ba3334419d9ccc455d5da653a32a0dcb8276397ca60b2214f1a8e32.json  query-fbe1e07d03116f04a7b5456f7b44c13a65fe7965b8af2cfa30d4d8ce702193c9.json
crates/sql-forge-macro/: Cargo.toml
crates/sql-forge-macro/src/: lib.rs
crates/sql-forge-trait/: Cargo.toml  README.md
crates/sql-forge-trait/src/: lib.rs
sql-forge-macro/: README.md
sql-forge-macro/src/: lib.rs
src/: lib.rs
tests/: Dockerfile  checksum.sh  env-mysql.sh  env-postgres.sh  env-sqlite.sh  init-pg.sql  init.sql  sql-forge-with-db.sh  sql-forge.sh  tests.rs
tests/mysql/: checksums.txt  tests_expanded.rs
tests/postgres/: checksums.txt  tests_expanded.rs
tests/sqlite/: checksums.txt  tests_expanded.rs
tests/ui/: duplicate_top_param_mapping.rs  multiple_models_static_mismatch.rs  same_param_top_and_section_only_section_map.rs  (+2 more)
(+172 files in other folders)
