[package]
name = "sql-forge-macro"
version.workspace = true
edition.workspace = true
description = "Procedural macro implementation for sql-forge."
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full"] }
toml = "0.8.23"
